Add analysis for undersized compressed class space.